--- a/res.html
+++ b/res.html
@@ -19,6 +19,18 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </header>
+        <div class="content000">
+            <div class="bannerText">
+                <div>
+                    <h2>EAT Healthy <br> Stay Healthy</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, cum quae dicta voluptate exercitationem</p>
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+            <div class="bannerImg">
+                <img src="/imagenes/pexels-markus-winkler-2862154.jpg" alt="">
+            </div>
+        </div>
     </div>
 </body>
 </html>
