--- a/res.html
+++ b/res.html
@@ -5,32 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="res.css">
-    <link rel="stylesheet" href="js/res.js">
-    <title>Responsive Website</title>
+    <title>Glowing Gradient Loading Bar</title>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <a href="#" class="logo">Good <span>Foods</span></a>
-            <ul>
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">Menu</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </header>
-        <div class="content000">
-            <div class="bannerText">
-                <div>
-                    <h2>EAT Healthy <br> Stay Healthy</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, cum quae dicta voluptate exercitationem</p>
-                    <a href="#">Read More</a>
-                </div>
-            </div>
-            <div class="bannerImg">
-                <img src="/imagenes/pexels-markus-winkler-2862154.jpg" alt="">
-            </div>
-        </div>
-    </div>
+   <div class="loader"></div>
 </body>
 </html>
